--- a/package.json
+++ b/package.json
@@ -14,15 +14,25 @@
     "db:generate": "prisma generate --schema prisma/schema.prisma",
     "db:studio": "prisma studio --schema prisma/schema.prisma",
     "db:seed": "tsx scripts/seed.ts",
-    "postinstall": "prisma generate --schema prisma/schema.prisma"
+    "postinstall": "prisma generate --schema prisma/schema.prisma",
+    "db:backup": "mkdir -p backups/prisma && cp prisma/dev.db backups/prisma/dev.db.backup-$(date +%Y%m%d)"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "@stripe/stripe-js": "^2.4.0",
+    "@supabase/supabase-js": "^2.50.2",
     "bcryptjs": "^2.4.3",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "csv-parse": "^5.6.0",
+    "dotenv": "^17.0.0",
     "lucide-react": "^0.344.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
@@ -30,7 +40,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
+    "sonner": "^2.0.5",
     "stripe": "^14.13.0",
+    "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
